# DUKE

./: .gitignore  CLAUDE.md  README.md  dry_run.py  pyproject.toml
archive/03_processing_legacy/: catalyst_mapper.py  evidence_types.py
common/: brief_adapter.py  edgar_client.py  llm_client.py
common/llm/: __init__.py  base.py  claude_client.py  perplexity_client.py
config/: investor_profile.json
data/processed/: AAPL_analyst_brief_20260524.json  AMD_analyst_brief_20260524.json  GOOGL_analyst_brief_20260524.json  MSFT_analyst_brief_20260524.json  NVDA_analyst_brief_20260520.json  NVDA_analyst_brief_20260524.json
data/scored/: AAPL_score_20260521.json  AAPL_score_20260524.json  AMD_score_20260521.json  AMD_score_20260524.json  AVGO_score_20260521.json  GOOGL_score_20260521.json  GOOGL_score_20260524.json  META_score_20260521.json  MSFT_score_20260521.json  MSFT_score_20260524.json  NVDA_score_20260521.json  NVDA_score_20260524.json  PLTR_score_20260521.json
data/screening/: shortlist_20260521.json  shortlist_20260524.json
docs/: HISTORY.md  archetype_rationale.md  architecture.md  backtest_preregistration.md  backtest_result_01.md  backtest_result_02.md  stage_05_debate.md
docs/contracts/: stage_01_output.md  stage_02_output.md  stage_03_output.md  stage_04_input.md  stage_04_output.md  stage_05_input.md  stage_05_output.md  stage_06_input.md  stage_06_output.md  stage_07_input.md
layer1_screening/: README.md
layer1_screening/schemas/: screening_output.json
layer1_screening/screening/: reason_codes.py  signal_scorer.py
layer2_research/: README.md
(+87 files in other folders)
