[project]
name = "duke"
version = "0.1.0"
description = "DUKE — multi-agent investment intelligence framework"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0",
    "yfinance",
    "pdfplumber",
    "youtube-transcript-api",
]

[project.optional-dependencies]
dev = [
    "requests",
    "pandas",
]

[tool.setuptools.packages.find]
include = ["common*"]
